--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
      <div class="cards"> 
      <div class="card">
      
-         <img src="images/EMLYON.png"style="width: 25% class="center">
+         <img src="images/EMLYON" style="width: 25% class="center">
          <p> 
           📍 Master's degree in Data science & Digital marketing
           📍 In Company Project in Shanghai
@@ -44,7 +44,7 @@
             • Retail Digitalization
             • Programmatic advertising
             • Machine Learning with Python
-            <p><a href="https://masters.em-lyon.com/en/msc-in-digital-marketing-data-science" target="_blank">Discover the program</a </p>
+            <p><a href="https://masters.em-lyon.com/en/msc-in-digital-marketing-data-science" target="_blank" >Discover the program</a </p>
             
           </p>    
          </div>
@@ -58,7 +58,7 @@
             • Marketing
             • Statistics
             • Finance
-            <p><a href="https://formations.dauphine.fr/offre/fr-FR/fiche/L3GST/description" target="_blank" >Discover the program</a> </p>
+            <p><a href="https://formations.dauphine.fr/offre/fr-FR/fiche/L3GST/description" target="_blank">Discover the program</a> </p>
           </p>
       </div> 
      </div>
@@ -68,7 +68,7 @@
      <h2> Experience</h2>
      <div class="cards">  
      <div class="card"> 
-       <img src="images/sig.png"style="width: 25% class="center">
+       <img src="images/sig.png "style="width: 25% class="center">
         <p>📍Participated in the elaboration of the survey of the first municipal elections in Tunisia based on a sample of 32306 electors
          </p>
         <p>📍Prepared satisfaction survey and monitor different KPIs  </p>
