--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
      <div class="cards"> 
      <div class="card">
      
-         <img src="images/EMLYON" style="width: 25% class="center">
+         <img src="images/EMLYON.png" style="width: 25% class="center">
          <p> 
           📍 Master's degree in Data science & Digital marketing
           📍 In Company Project in Shanghai
