--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
      <div class="cards"> 
      <div class="card">
      
-         <img src="images/EMLYON.png" style="width: 25% class="center">
+         <img src="images/EMLYON.PNG" style="width: 25% class="center">
          <p> 
           📍 Master's degree in Data science & Digital marketing
           📍 In Company Project in Shanghai
@@ -49,7 +49,7 @@
           </p>    
          </div>
      <div class="card">
-        <img src="images/daup.png"style="width: 25% class="center">
+        <img src="images/daup.PNG"style="width: 25% class="center">
         <p> 
           📍 Bachelor in Management
           📍 Founder of Club "El forum"
@@ -68,14 +68,14 @@
      <h2> Experience</h2>
      <div class="cards">  
      <div class="card"> 
-       <img src="images/sig.png "style="width: 25% class="center">
+       <img src="images/sig.PNG "style="width: 25% class="center">
         <p>📍Participated in the elaboration of the survey of the first municipal elections in Tunisia based on a sample of 32306 electors
          </p>
         <p>📍Prepared satisfaction survey and monitor different KPIs  </p>
         <p>📍Processed, analyzed and interpreted qualitative and quantitative data  </p>
      </div>
        <div class="card">
-        <img src="images/ey.png" style="width: 25% class="center">
+        <img src="images/ey.PNG" style="width: 25% class="center">
          <p>📍Contributed to Auditing “El Baraka Bank”, Tunis</p> 
          <p>📍Performed bank reconciliation </p>
          <p>📍Drafted financial statements for 2015</p>
@@ -96,7 +96,7 @@
      <div class="flip-card">
       <div class="flip-card-inner">
        <div class="flip-card-front">
-        <img src="images/art.png" style="width:100% class="center">
+        <img src="images/art.PNG" style="width:100% class="center">
        </div>
        <div class="flip-card-back">
          <p>📍Elaborated a project with Artefact in Shanghai </p> 
@@ -108,7 +108,7 @@
     <div class="flip-card">
       <div class="flip-card-inner">
        <div class="flip-card-front">
-        <img img src="images/enactus.png" style="width: 100% class="center">
+        <img img src="images/enactus.PNG" style="width: 100% class="center">
        </div>
        <div class="flip-card-back">
          <p>📍Located sponsors for social progress actions in Tunisia   </p> 
