--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
          <p>📍Drafted financial statements for 2015</p>
        </div>
        <div class="card">
-        <img src="images/aiesec.png" style="width: 25% class="center">
+        <img src="images/aiesec.PNG" style="width: 25% class="center">
          <p>📍Coached 20 low-income children in the state of Sao Paolo through a non-   profit organization, Padre Bonafe   
         </p>
          <p>📍Taught children French and English, and organized after class youth Activities</p>
