--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-149102464-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-149102464-1');
+ </script>
 	 <title> Youssef Horchani's profile </title>
 	 <meta name="description" content="This is the profile"
 	 <meta charset="UTF-8 ">
@@ -9,8 +17,8 @@
 </head>
 <body>
 
- <div class="container"> 
-
+ 
+  <div class="container"> 
     <div class="navigation-bar"> 
      <ul> 
        <li><a href="index.html">Home</a></li>
@@ -20,6 +28,7 @@
        <li><a href="https://www.linkedin.com/in/youssef-horchani-a30a4a148/"target="_blank"> Follow me</a></li>
      </ul>
     </div>
+
 
      <div class="card-white" > 
 	    <h1 > Youssef Horchani </h1> 
