--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+  <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-5FG4ZSW');</script>
+<!-- End Google Tag Manager -->
+
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-149102464-1"></script>
   <script>
@@ -9,6 +18,7 @@
     gtag('js', new Date());
     gtag('config', 'UA-149102464-1');
  </script>
+
 	 <title> Youssef Horchani's profile </title>
 	 <meta name="description" content="This is the profile"
 	 <meta charset="UTF-8 ">
@@ -16,6 +26,11 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
+  
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5FG4ZSW"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 
  
   <div class="container"> 
